--- a/css/sesion2/EjerciosSes/ejercio1/styles.css
+++ b/css/sesion2/EjerciosSes/ejercio1/styles.css
@@ -1,7 +1,6 @@
 .container {
   width: 30rem;
   height: 14rem;
-  background-color: aqua;
   box-sizing: border-box;
   margin-bottom: 1rem;
 }
@@ -10,9 +9,10 @@
   color: green;
 }
 .container_primero {
-  border: 4px dashed #6d4e25;
+  border: 4px dotted #6d4e25;
   padding: 1rem;
   text-align: right;
+  margin-bottom: 70px;
 }
 .container_central {
   margin-left: auto;
@@ -26,7 +26,10 @@
 }
 .container_ultimo {
   border: 4px solid black;
-  padding: 4px;
+  padding: 6px 8px;
+  text-align: justify;
+  line-height: 1.5;
+  height: 16rem;
 }
 .footer {
   width: 80%;
